Reformatting code